# ultimate_marketing_team

./: .dockerignore  .env.example  .env.staging  .flake8  .gitignore  CLAUDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.health-api  LOGGING_IMPROVEMENTS.md  Makefile  Makefile.test  OPTIMIZATION_SUMMARY.md  POSTGRES17_MIGRATION.md  PR_SUMMARY.md  README.md  README_COMPLIANCE.md  README_SEO_MODULE.md  SCRIPTS.md  STAGING_DEPLOY_INSTRUCTIONS.md  STAGING_SETUP.md  api_gateway.py  check_health_api.sh  deploy_health_api.sh  deploy_local.sh  deploy_staging.sh  deploy_staging_progressive.sh  deploy_staging_simple.sh  deploy_to_staging.sh  docker-compose.dev.yml  docker-compose.ec2.yml  docker-compose.gsc-test.yml  docker-compose.minimal.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.staging.minimal.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  fix_imports.py  (+16 more)
.github/: compliance.yml
.github/workflows/: ci-cd.yml  compliance-tests.yml  integration-tests.yml  performance.yml  search-console-monitoring.yml  search-console-tests.yml  security.yml
.tokens/: README.md  example_token.json
.zap/: rules.tsv
architecture_improvements/: 01_interface_based_agents.py  02_message_format_specification.py  03_circuit_breaker.py  04_distributed_tracing.py  05_domain_driven_design.py  06_architecture_documentation.md  06_component_diagram.txt  07_data_flow_diagram.txt  README.md
benchmarks/: Dockerfile  README.md  docker-compose.benchmark.yml
benchmarks/dashboards/: api_performance_dashboard.json  (+1 more)
config/: README.md
deployment_archives/: README.md
deployments/: README.md
docker/: Dockerfile.api-gateway  api-gateway.dockerfile
docs/: CI_CD_LOG_INTEGRATION.md  COMPLIANCE.md  DEVELOPER_GUIDE.md  LOGGING_SYSTEM.md  README.md  SCRIPTS.md  SECURITY_BEST_PRACTICES.md  api_documentation.md  content_generation_api.md  developer_guide.md  slo-definitions.md  staging-troubleshooting.md
docs/api/: index.html  (+4 more)
frontend/: .env.example  .env.staging  .env.staging.template  .eslintrc.js  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.staging.config.ts
migrations/: README.md  env.py
monitoring/: Dockerfile.health-api  health_api.py
requirements/: api-requirements.txt
scripts/: README.md  backup_database.py  check_migration_patterns.py  check_staging_services.sh  create_test_user.py  create_test_users.py  deploy.py  deploy_staging.sh  direct_db_users.py  docker_create_users.sh  exporters.sh  fix_and_cleanup_pgvector.sh  fix_pgvector.sh  get_docker_metrics.sh  measure_docker_performance.sh  monitor_search_console_api.py  notify_deploy_status.py  notify_migration_status.py  notify_test_status.py  pre_migration_check.py  quick_deploy.sh  run.py  run_data_retention.py  seed_database.py  test_calendar_websocket.py
src/: App.tsx
tests/: README.md  TESTING_INTEGRATIONS.md  conftest.py
tmp_deploy/: alembic.ini  docker-compose.staging.yml  docker-compose.yml  frontend-ssl.yml
(+708 files in other folders)
