[project]
name = "ultimate_marketing_team"
version = "0.1.0"
description = "The Ultimate Marketing Team"
authors = [
    { name = "Landing Pad Digital", email = "connect@landingpad.digital" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [

]

[project.scripts]
ultimate_marketing_team = "ultimate_marketing_team.main:run"
run_platform = "ultimate_marketing_team.main:run"
test = "ultimate_marketing_team.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
