[project]
name = "ultimate_marketing_team"
version = "0.1.0"
description = "The Ultimate Marketing Team"
authors = [
    { name = "Landing Pad Digital", email = "connect@landingpad.digital" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pika>=1.3.2",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.23",
    "aiohttp>=3.9.1",
    "loguru>=0.7.2",
    "pyjwt>=2.8.0",
    "passlib>=1.7.4",
    "requests>=2.31.0",
    "aio-pika>=9.3.0",
    "beautifulsoup4>=4.12.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "flake8>=6.1.0",
    "bandit>=1.7.5",
    "pre-commit>=3.5.0",
]

[project.scripts]
ultimate_marketing_team = "ultimate_marketing_team.main:run"
run_platform = "ultimate_marketing_team.main:run"
test = "ultimate_marketing_team.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pytest.ini_options]
addopts = "--strict-markers -v"
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "slow: mark a test as slow",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 80
show_missing = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
